--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "homepage": "https://your-username.github.io/child-growth-dashboard",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -f -d dist"
+
   },
   "dependencies": {
     "react": "^19.0.0",
